<resources>
    <string name="app_name">CoinQ</string>

    <string name="action_market">Market</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_search">Search</string>
    <string name="action_setting">Setting</string>

    <string name="error_parse_json">Fail to Parse Json</string>
    <string name="error_get_data">Can Not Get Data</string>

    <string name="menu_tab_price">Price Chart</string>
    <string name="menu_tab_info">Information</string>
    <string name="menu_coin">Cryptocurrency</string>
    <string name="menu_exchange">Exchange</string>

    <string name="msg_please_wait">Please Wait</string>
    <string name="msg_insert_success">"Insert Success"</string>
    <string name="msg_delete_success">"Delete Success"</string>
    <string name="msg_fill_search">"Fill Search"</string>

    <string name="text_coin">Coin</string>
    <string name="text_price">Price</string>
    <string name="text_24_hours">24 Hours</string>
    <string name="text_market_cap">Market Cap</string>
    <string name="text_exchange_volume">Volume : </string>
    <string name="text_usd">USD</string>
    <string name="text_number_one">1</string>
    <string name="text_market_cap_rank">Market Cap Rank</string>
    <string name="text_trading_volume">Trading Volume</string>
    <string name="text_day_high">24h High</string>
    <string name="text_day_low">24h Low</string>
    <string name="text_max_high">All Time High</string>
    <string name="text_max_low">All Time Low</string>
    <string name="text_total_supply">Total Supply</string>
    <string name="text_max_supply">Max Supply</string>
    <string name="text_current_supply">Circulating Supply</string>
    <string name="text_home_page">Home Page</string>
    <string name="text_block_chain">Block Chain</string>
    <string name="text_forum">Discussion Forum</string>
    <string name="text_year_establish">Year Establish</string>
    <string name="text_facebook" translatable="false">FaceBook</string>
    <string name="text_redis" translatable="false">Redis</string>
    <string name="text_viet_nam">Vietnamese</string>
    <string name="text_english">English</string>
    <string name="text_language">Language</string>
    <string name="text_calculator">Calculator</string>
    <string name="text_internet">No Internet !</string>

</resources>
