<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_5"
    app:cardCornerRadius="@dimen/dp_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_5">

        <TextView
            android:id="@+id/textCoinName"
            android:layout_width="@dimen/dp_50"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/text_coin"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imageCoin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCoin" />

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/text_price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textDayChange"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintStart_toEndOf="@+id/imageCoin"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageCoin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textCoinName"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/textCoinName"
            app:layout_constraintStart_toStartOf="@+id/textCoinName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.05"
            app:srcCompat="@drawable/ic_splash_screen" />

        <TextView
            android:id="@+id/textMarketCap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/text_market_cap"
            app:layout_constraintBottom_toBottomOf="@+id/textDayChange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.4"
            app:layout_constraintStart_toEndOf="@+id/textDayChange"
            app:layout_constraintTop_toTopOf="@+id/textDayChange" />

        <TextView
            android:id="@+id/textDayChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/text_24_hours"
            app:layout_constraintBottom_toBottomOf="@+id/textPrice"
            app:layout_constraintEnd_toStartOf="@+id/textMarketCap"
            app:layout_constraintHorizontal_weight="0.15"
            app:layout_constraintStart_toEndOf="@+id/textPrice"
            app:layout_constraintTop_toTopOf="@+id/textPrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
