<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <View
        android:id="@+id/viewToolbar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:background="@color/green_bot_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textToolbarTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_calculator"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/viewToolbar"
        app:layout_constraintEnd_toEndOf="@id/viewToolbar"
        app:layout_constraintStart_toStartOf="@id/viewToolbar"
        app:layout_constraintTop_toTopOf="@id/viewToolbar" />

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_baseline_arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/viewToolbar"
        app:layout_constraintStart_toStartOf="@id/viewToolbar"
        app:layout_constraintTop_toTopOf="@id/viewToolbar" />

    <View
        android:id="@+id/viewHeader"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_5"
        android:background="@drawable/back_ground_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewToolbar" />

    <TextView
        android:id="@+id/textUSD"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_20"
        android:background="@color/green_bot_nav"
        android:gravity="center"
        android:text="@string/text_usd"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/viewHeader"
        app:layout_constraintStart_toStartOf="@id/viewHeader"
        app:layout_constraintTop_toTopOf="@id/viewHeader" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_10"
        android:autofillHints="@string/text_number_one"
        android:background="@drawable/back_ground_description"
        android:gravity="end|center"
        android:hint="@string/text_number_one"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/dp_5"
        android:paddingEnd="@dimen/dp_20"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/textUSD"
        app:layout_constraintEnd_toEndOf="@id/viewHeader"
        app:layout_constraintStart_toEndOf="@id/textUSD"
        app:layout_constraintTop_toTopOf="@id/textUSD" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCoins"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp_5"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>
